Work in progress ... some generic improvements in the SubjectProberty/Criterion backend classes. Other commits will follow today.
git-svn-id: https://randi2.svn.sourceforge.net/svnroot/randi2/trunk@2400 ccfe945e-4522-0410-b90e-900a8cb55c58